# Database_application_development

./: .gitignore
LR_1/: CMakeLists.txt  README.md  main.cpp
LR_1/include/: Cash.h  Cashiers.h  CashiersGateway.h  Clients.h  ClientsGateway.h  Connection.h  Currencies.h  CurrenciesGateway.h  Gateway.h  List.h  Menu.h  Object.h  Rates.h  RatesGateway.h  Table.h  Transactions.h  TransactionsGateway.h  UserAction.h
LR_1/src/: Cashiers.cpp  CashiersGateway.cpp  Clients.cpp  ClientsGateway.cpp  Connection.cpp  Currencies.cpp  CurrenciesGateway.cpp  Menu.cpp  Rates.cpp  RatesGateway.cpp  Table.cpp  Transactions.cpp  TransactionsGateway.cpp  UserAction.cpp
LR_2/: LR_2.sln  README.md
LR_2/LR_2/: Menu.cs  Program.cs  UserAction.cs
LR_2/LR_2/NHibernate/: HQLHelper.cs  NHibernateHelper.cs
LR_2/LR_2/NHibernate/Data/: Cashiers.cs  Clients.cs  Currencies.cs  Rates.cs  Transactions.cs
LR_2/LR_2/NHibernate/MappingData/: RatesMap.cs  (+4 more)
LR_3-4/: README.md  package-lock.json  package.json
LR_3-4/.meteor/: .id  packages  versions
LR_3-4/client/: main.html
LR_3-4/imports/api/: CashiersCollection.js  CurrenciesCollection.js  RatesCollection.js
LR_3-4/imports/ui/: Auth.jsx  Space.jsx
LR_3-4/tests/: main.js
RGR/: README.md
RGR/localhost/: index.html
RGR/localhost/css/: main.css
RGR/localhost/js/: main.js
RGR/server.loc/api/: swagger-initializer.js  swagger.yaml
RGR/server.loc/config/: connection.php
RGR/server.loc/models/: Cashiers.php  Clients.php  Currencies.php  Rates.php  Transactions.php
RGR/server.loc/post/: delete.php  insert.php  load.php  update.php
(+1 files in other folders)
